# WSI-CDA-TIL-Features

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
examples/: example_manifest.csv
examples/cda_cells/: example_slide_001_cells.csv  example_slide_002_cells.csv
examples/roi_masks/: example_slide_001_core.geojson  example_slide_001_peritumor.geojson  example_slide_001_selected_cdaroi_stage5b.geojson  example_slide_002_core.geojson  example_slide_002_peritumor.geojson  example_slide_002_selected_cdaroi_stage5b.geojson
examples/tumor_grids/: example_slide_001_tumorgrid.csv  example_slide_002_tumorgrid.csv
scripts/: run_cda_one_slide.groovy
src/wsi_cda_til_features/: __init__.py  cda_io.py  cli.py  config.py  features.py  manifest.py  overlay.py  pipeline.py  qc.py  qupath_runner.py  roi.py
tests/: test_cda_io.py  test_features.py  test_manifest.py  test_overlay.py  test_roi.py
